[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/script/ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://game/scene/ui/hud/Player_0.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/scene/ui/chat/chat.tscn" type="PackedScene" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MiniMap" type="Panel" parent="."]
margin_left = 835.0
margin_right = 1025.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 972.853
margin_top = 267.036
margin_right = 1021.85
margin_bottom = 287.036
text = "menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_UI" type="Control" parent="."]
margin_right = 96.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ATB" type="Panel" parent="Player_UI"]
margin_left = 607.0
margin_top = 528.0
margin_right = 1018.0
margin_bottom = 594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Player_UI/ATB"]
margin_left = 9.0
margin_top = 7.0
margin_right = 401.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_0" parent="Player_UI/ATB/HBoxContainer" instance=ExtResource( 2 )]

[node name="BattleAction" type="Panel" parent="Player_UI"]
visible = false
margin_left = 6.96399
margin_top = 468.137
margin_right = 87.964
margin_bottom = 594.137
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Player_UI/BattleAction"]
margin_left = 5.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="Player_UI/BattleAction/VBoxContainer"]
margin_right = 71.0
margin_bottom = 20.0
text = "Attaquer"

[node name="spell" type="Button" parent="Player_UI/BattleAction/VBoxContainer"]
margin_top = 24.0
margin_right = 71.0
margin_bottom = 44.0
text = "Magie"

[node name="item" type="Button" parent="Player_UI/BattleAction/VBoxContainer"]
margin_top = 48.0
margin_right = 71.0
margin_bottom = 68.0
text = "Objet"

[node name="protect" type="Button" parent="Player_UI/BattleAction/VBoxContainer"]
margin_top = 72.0
margin_right = 71.0
margin_bottom = 92.0
text = "Defendre"

[node name="cancel" type="Button" parent="Player_UI/BattleAction/VBoxContainer"]
margin_top = 96.0
margin_right = 71.0
margin_bottom = 116.0
text = "Annuler "

[node name="ListEnemy" type="Panel" parent="Player_UI"]
margin_right = 160.0
margin_bottom = 95.0
rect_min_size = Vector2( 100, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tableau" type="ItemList" parent="Player_UI/ListEnemy"]
margin_right = 160.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" parent="." instance=ExtResource( 3 )]
visible = false
